[tool.poetry]
name = "cowsayrandom"
version = "0.1.0"
description = "A random cowsay python and CLI generator"
authors = ["Sam Edwardes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"

[tool.poetry.scripts]
cowsayrandom = "cowsayrandom.main:app"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
